Build login signup page and setup its backend

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
     "next": "13.4.19",
     "nodemailer": "^6.9.4",
@@ -27,5 +28,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2"
   }
 }
