--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://Aniruddh:Abhiani@7@cluster0.z2eipw2.mongodb.net/
+MONGO_URI=mongodb+srv://Aniruddh:Abhiani%407@cluster0.z2eipw2.mongodb.net/?retryWrites=true&w=majority
 TOKEN_SECRET=authentication
 DOMAIN=http://localhost:3000
