--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
